--- a/launcher.html
+++ b/launcher.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>GBA Emulator</title>
+        <title>☆ starg3n gba ☆</title>
         <meta charset="UTF-8">
             <!--Required Scripts-->
             <script src="IodineGBA/includes/TypedArrayShim.js"></script>
@@ -57,7 +57,8 @@
             <script src="user_scripts/IodineGBAAudioGlueCode.js"></script>
             <script src="user_scripts/IodineGBACoreGlueCode.js"></script>
             <script src="user_scripts/base64.js"></script>
-            <link rel="stylesheet" href="user_css/main.css">
+            <!--<link rel="stylesheet" href="user_css/main.css">-->
+            <link rel="stylesheet" href="https://starg3n.github.io/data/style.css">
     </head>
     <body>
         <canvas id="emulator_target" width="240px" height="160px"></canvas>
