--- a/launcher.html
+++ b/launcher.html
@@ -61,7 +61,9 @@
             <link rel="stylesheet" href="https://starg3n.github.io/data/style.css">
     </head>
     <body>
-        <canvas id="emulator_target" width="240px" height="160px"></canvas>
-        <span id="tempMessage"></span>
+        <div>
+            <canvas id="emulator_target" width="1024px" height="768px"></canvas>
+            <span id="tempMessage"></span>
+        </div>
     </body>
 </html>
