--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <title>☆ starg3n gba ☆</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="https://starg3n.github.io/data/style.css">
-        <link rel="icon" type="image/x-icon" href="https://starg3n.github.io/data/favicon.ico">
+        <link rel="stylesheet" href="https://AprilJMystery.github.io/data/style.css">
+        <link rel="icon" type="image/x-icon" href="https://AprilJMystery.github.io/data/favicon.ico">
     </head>
     <body">
      <div style="text-align:center">
-        <a href="https://starg3n.github.io"><img src="https://starg3n.github.io/data/favicon.ico"></a></button>
+        <a href="https://starg3n.github.io"><img src="https://AprilJMystery.github.io/data/favicon.ico"></a></button>
         <h1>☆ starg3n gba emulator ☆</h1>
        <!-- <img src="Binaries/gba.png" alt="GBA Logo"><button> -->
         <p>☆ game selection ☆</p>
