--- a/launcher.html
+++ b/launcher.html
@@ -58,7 +58,7 @@
             <script src="user_scripts/IodineGBACoreGlueCode.js"></script>
             <script src="user_scripts/base64.js"></script>
             <!--<link rel="stylesheet" href="user_css/main.css">-->
-            <link rel="stylesheet" href="https://starg3n.github.io/data/style.css">
+            <link rel="stylesheet" href="https://AprilJMystery.github.io/data/style.css">
     </head>
     <body>
         <div>
